Fixing layout bugs

--- a/app/styles/componants/_about-us.scss
+++ b/app/styles/componants/_about-us.scss
@@ -16,22 +16,18 @@
         transition: all 0.5s ease; 
 
         @media screen and (min-width: 1300px) {
-        .headshot {
-            width: 25%; } }
+          width: 25%;}
 
         @media screen and (max-width: 768px) {
-        .headshot {
           padding: 0 0.35em;
-          width: 33.333%; } }
+          width: 33.333%; } 
 
         @media screen and (max-width: 640px) {
-        .headshot {
           padding: 0 1.5em;
-          width: 50%; } }  
+          width: 50%; } 
 
         @media screen and (max-width: 480px) {
-        .headshot {
-          width: 100%; } }  
+          width: 100%; }   
     }
 
     .people-list {
@@ -40,6 +36,7 @@
 
     .people-list h1 {
       font-size: 1.5rem;
+      margin-top: 10px;
     }
 
     .card {
@@ -52,12 +49,8 @@
         }
         .back {
           color: white;
-          padding: 10px 25px;
-        
-            h1 {
-              color: white;
-              font-size: 1.7rem;
-            }
+          padding: 25px;
+
             p {
               color: white;
               font-size: 1.46rem;      
@@ -70,6 +63,11 @@
             }
             &.design {
               background-image: url("/images/yellow-back-500.png");
+            }
+            .fa {
+              color: #fff;
+              font-size: 21px;
+              margin-right: 5px;
             }
         }
     }
